compiler/testData/diagnostics/tests/typealias/typealiasRhsRepeatedAnnotations.kt
@Target(AnnotationTarget.TYPE)
annotation class A

typealias Test1 = @A <!REPEATED_ANNOTATION!>@A<!> Int
